--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "system",
+    "target": "es5",
+    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
-    "listFiles": true
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules",
-    "typings/browser.d.ts"
+    "typings/browser.d.ts",
+    "typings/main",
+    "typings/main.d.ts"
   ]
 }
