Upgraded to Angular 2.0 final

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "noImplicitAny": false,
     "outDir": "dist"
   },
+  "types": [
+    "hammerjs"
+  ],
   "exclude": [
     "node_modules",
     "dist",
