--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23",
+    "zone.js": "latest",
     "angular2-in-memory-web-api": "0.0.20",
     "bootstrap": "^3.3.6"
   },
